--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,18 @@
   list-style-type: none;
 }
 
+.logo {
+  color: rgb(212, 162, 10);
+  border: 2px solid rgb(212, 162, 10);
+  padding: 0.5rem;
+  border-radius: 35%;
+}
+
 .nav-menu {
   display: flex;
   padding: 2rem;
   justify-content: space-evenly;
+  align-items: center;
   border-bottom: 2px solid rgb(212, 162, 10);
 }
 
